--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body{
 }
 
 canvas{
-    border: 5px;
+    border-color: aliceblue;
+    border: 5px solid white;
     border-radius: 20px;
+    box-shadow: 5px 5px 5px black;
 }
